--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <html>
-	<title>隐私策略</title>
-<body>
-	<h1>hello,烤肠</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>简简单单说简单工作室</title>
+        <script></script>
+	<style type="text/css">
+		#LogoName{
+			width:100%;
+			height:200px;
+		}
+	</style>
+    </head>
+    <body>
+	<h1 id="LogoName">欢迎来到烤肠世界！</h1>
+    </body>
 </html>
