--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <title>简简单单说简单工作室</title>
-        <script></script>
+    	<link rel="icon" href="烤肠.svg" type="image/x-icon"/>  
 	<style type="text/css">
 		#LogoName{
 			width:100%;
