--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
     <head>
         <meta charset="UTF-8">
         <title>简简单单说简单工作室</title>
-    	<link rel="icon" href="烤肠.ico" type="image/x-icon">
-	<link rel="shortcut icon" href="烤肠.ico" type="image/x-icon">
+    	<link rel="icon" href="烤肠.png" type="image/x-icon">
+	<link rel="shortcut icon" href="烤肠.png" type="image/x-icon">
 	<style type="text/css">
 		#LogoName{
 			width:100%;
 			height:200px;
+			text-align:center;
 		}
 	</style>
     </head>
